<resources>
    <string name="app_name">ChatApp</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_tvLogo">Chat App</string>
    <string name="login_tvRegister">New user? Register Now</string>
    <string name="signup_etFullname">Full Name</string>
    <string name="signup_etRePassword">Re-Enter Password</string>
    <string name="signup_tvLogin">Already have an account? Log In</string>
    <string name="BaseUrl">http://10.0.2.2:5125/api/</string>
    <string name="localHost">localhost:5125</string>
    <string name="signup_btnSignup">Sign Up</string>
    <string name="login_backgroundDesc">background</string>
    <string name="login_logoDesc">logo</string>
    <string name="login_usernameIconDesc">username_icon</string>
    <string name="login_passwordIconDesc">password_icon</string>
    <string name="conv_inputHint">Write you Message Here</string>
    <string name="sendBtn_text">send</string>
    <string name="pick_a_picture_for_your_account">Upload profile picture</string>
    <string name="settings_page">Settings Page</string>
</resources>